서버 초기 프로젝트 asw 연동

--- a/FRONTEND/app/src/main/AndroidManifest.xml
+++ b/FRONTEND/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".AdultLoginActivity" />
-        <activity android:name=".Adult.AdultHome.AdultHomeActivity"></activity>
+        <activity android:name=".Adult.AdultHome.AdultHomeActivity" />
+        <activity android:name=".Adult.Camera.CameraActivity"></activity>
     </application>
 
 </manifest>
