--- a/BACKEND/KidsKeeper/package.json
+++ b/BACKEND/KidsKeeper/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.269.1",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -13,6 +14,7 @@
     "express": "^4.16.3",
     "generator": "^1.0.1",
     "morgan": "~1.9.0",
+    "multer-s3": "^2.7.0",
     "serve-favicon": "~2.4.5"
   }
 }
