--- a/BACKEND/KidsKeeper/package.json
+++ b/BACKEND/KidsKeeper/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.269.1",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -15,6 +16,7 @@
     "generator": "^1.0.1",
     "morgan": "~1.9.0",
     "multer-s3": "^2.7.0",
+    "mysql": "^2.15.0",
     "serve-favicon": "~2.4.5"
   }
 }
