--- a/BACKEND/KidsKeeper/package.json
+++ b/BACKEND/KidsKeeper/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.6.1",
     "aws-sdk": "^2.269.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.18.2",
@@ -15,8 +16,10 @@
     "express": "^4.16.3",
     "generator": "^1.0.1",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
     "multer-s3": "^2.7.0",
     "mysql": "^2.15.0",
+    "nodemailer": "^4.6.7",
     "serve-favicon": "~2.4.5"
   }
 }
