안드로이드 카메라, 음성 송출 엑티미티 추가 및 연결

--- a/FRONTEND/app/src/main/AndroidManifest.xml
+++ b/FRONTEND/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".AdultLoginActivity" />
         <activity android:name=".Adult.AdultHome.AdultHomeActivity" />
         <activity android:name=".Adult.Camera.CameraActivity" />
-        <activity android:name=".Kids.ConnectActivity"></activity>
+        <activity android:name=".Kids.ConnectActivity" />
+        <activity android:name=".Adult.Voice.VoiceActivity"></activity>
     </application>
 
 </manifest>
