안드로이드 단어게임 단어 조회 구현

--- a/FRONTEND/app/src/main/AndroidManifest.xml
+++ b/FRONTEND/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         <activity android:name=".Kids.Word.WordGame" />
         <activity android:name=".Kids.RecyclerView" />
         <activity android:name=".Kids.Bluetooth.BluetoothList" />
-        <activity android:name=".Kids.WordGame.CategorySelectActivity"></activity>
+        <activity android:name=".Kids.WordGame.CategorySelectActivity" />
+        <activity android:name=".Kids.WordGame.PlayWordGameActivity"></activity>
     </application>
 
 </manifest>
