--- a/FRONTEND/app/src/main/AndroidManifest.xml
+++ b/FRONTEND/app/src/main/AndroidManifest.xml
@@ -4,11 +4,13 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <!-- 블루투스 설정메뉴 -->
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <!-- 안드로이드 메모리 가용 용량 증가(largeHeap) -->
     <application
