안드로이드 코드 합치기

--- a/FRONTEND/app/src/main/AndroidManifest.xml
+++ b/FRONTEND/app/src/main/AndroidManifest.xml
@@ -37,10 +37,10 @@
         <activity android:name=".Kids.KidsMain" />
         <activity android:name=".Kids.Operate.OperateRobot" />
         <activity android:name=".Kids.Word.WordGame" />
-        <activity android:name=".Kids.WordGame.CategorySelectActivity" />
-        <activity android:name=".Kids.WordGame.PlayWordGameActivity" />
+        <activity android:name=".Kids.Operate.WordGame.CategorySelectActivity" />
+        <activity android:name=".Kids.Operate.WordGame.PlayWordGameActivity" />
         <activity android:name=".Adult.Community.BoardActivity"></activity>
-        <activity android:name=".Kids.WordGame.SuccessWord"></activity>
+        <activity android:name=".Kids.Operate.WordGame.SuccessWord"></activity>
 
         <activity android:name=".Adult.Community.BoardActivity" />
         <activity android:name=".Adult.Community.BoardDetailActivity" />
