--- a/FRONTEND/app/src/main/AndroidManifest.xml
+++ b/FRONTEND/app/src/main/AndroidManifest.xml
@@ -20,19 +20,11 @@
         android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        >
-
-        <activity android:name=".Home.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        android:theme="@style/AppTheme">
+        <activity android:name=".Home.LoginActivity"></activity>
         <activity android:name=".Adult.AdultHome.AdultHomeActivity" />
         <activity android:name=".Adult.Camera.CameraActivity" />
         <activity android:name=".Kids.Operate.ConnectActivity" />
-        <activity android:name=".Adult.Voice.VoiceActivity" />
         <activity android:name=".Kids.PlayKidsMain" />
         <activity android:name=".Kids.Operate.OperateRobot" />
         <activity android:name=".Kids.Operate.WordGame.CategorySelectActivity" />
@@ -43,7 +35,14 @@
         <activity android:name=".Home.HomeActivity" />
         <activity android:name=".Home.JoinActivity" />
         <activity android:name=".Kids.KidsHome.KidsHome" />
-        <activity android:name=".Kids.HomeWork.HomeWork"></activity>
+        <activity android:name=".Kids.HomeWork.HomeWork" />
+        <activity android:name=".Home.SplashActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
