디렉토리 및 코드 정리

--- a/FRONTEND/app/src/main/AndroidManifest.xml
+++ b/FRONTEND/app/src/main/AndroidManifest.xml
@@ -21,20 +21,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Home.LoginActivity"></activity>
+        <activity android:name=".Home.LoginActivity" />
         <activity android:name=".Adult.AdultHome.AdultHomeActivity" />
         <activity android:name=".Adult.Camera.CameraActivity" />
-        <activity android:name=".Kids.Operate.ConnectActivity" />
-        <activity android:name=".Kids.PlayKidsMain" />
+        <activity android:name=".Kids.Connect.ConnectActivity" />
         <activity android:name=".Kids.Operate.OperateRobot" />
-        <activity android:name=".Kids.Operate.WordGame.CategorySelectActivity" />
-        <activity android:name=".Kids.Operate.WordGame.PlayWordGameActivity" />
-        <activity android:name=".Kids.Operate.WordGame.SuccessWord" />
+        <activity android:name=".Kids.WordGame.CategorySelectActivity" />
+        <activity android:name=".Kids.WordGame.PlayWordGameActivity" />
+        <activity android:name=".Kids.WordGame.SuccessWord" />
         <activity android:name=".Adult.Community.BoardDetailActivity" />
         <activity android:name=".Adult.Community.BoardWriteActivity" />
         <activity android:name=".Home.HomeActivity" />
         <activity android:name=".Home.JoinActivity" />
-        <activity android:name=".Kids.KidsHome.KidsHome" />
         <activity android:name=".Kids.HomeWork.HomeWork" />
         <activity android:name=".Home.SplashActivity">
             <intent-filter>
@@ -43,6 +41,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Kids.KidsHome.KidsHomeActivity"></activity>
     </application>
 
 </manifest>
